Update java.gradle